fixed products UI, update carousel, calc total

--- a/src/resources/views/user/about_view.hbs
+++ b/src/resources/views/user/about_view.hbs
@@ -1,3 +1,100 @@
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/flickity@2/dist/flickity.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"
+      defer
+    ></script>
+    <script
+      src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"
+      defer
+    ></script>
+
+    <script
+      src="https://kit.fontawesome.com/655396e8e6.js"
+      defer
+      crossorigin="anonymous"
+    ></script>
+
+    <title>Medical Equipment Supply</title>
+  </head>
+  <body>
 {{>header}}
-<h1>This is about</h1>
-{{>footer}}
+    <div class="banner-sec sec" style="background-image: url(https://cpt-sutures.com/template/images/banner.jpg)">
+    <div class="container">
+        <h1 class="banner-title wow fadeInLeftShorter">About US.</h1>
+    </div>
+    </div>
+    <main id="main" class="subpage-main" style="margin-top: 0 !important; padding-top: 0 !important; background-color: #fff">
+        <div class="container" >
+            <div class="content" style="text-align: left !important;">
+                <span class="title-about" >About</span>
+            <p  class="indent">
+                At the end of 2019, the Covid-19 pandemic broke out and has spread to more than 100 countries
+                and territories, greatly affecting the economy in general and the industry
+                healthcare in particular globally.DTU's student group has built a project medical website
+                To address the staggering shortage of medical resources in Vietnam
+                as well as serving the needs of the people to buy equipment.
+                <br>
+                <br>
+                The products that we offer can be found on the market with
+                the price is much cheaper, even a lot, but we believe the truth
+                The wisdom of customers will help them choose a stable seller,
+                Quality standards and the trust of customers are the resources for us
+                I grow.
+                </p>
+            </div>
+            <div class="Contact">
+            <p>Need some help? call 033 700 5464 MY - MEDICAL</p>
+            </div>
+            <div class="team-member">
+            <div class="header">
+                <p>Project construction team</p>
+            </div>
+            <div class="info">
+                <div class="member">
+                    <img height="200px" width="200px" src="/images/21-avatar-outline.svg" alt="">
+                    <span class="name">Luc Ha</span>
+                </div>
+                <div class="member">
+                    <img height="200px" width="200px" src="/images/21-avatar-outline.svg" alt="">
+                    <span class="name">Nhan Dang</span>
+                </div>
+                <div class="member">
+                    <img height="200px" width="200px" src="/images/21-avatar-outline.svg" alt="">
+                    <span class="name">Phong Dinh</span>
+                </div>
+                <div class="member">
+                    <img height="200px" width="200px" src="/images/21-avatar-outline.svg" alt="">
+                    <span class="name">Thang Ton</span>
+                </div>
+                <div class="member">
+                    <img height="200px" width="200px" src="/images/21-avatar-outline.svg" alt="">
+                    <span class="name">Nam Nguyen</span>
+                </div>
+            </div>
+        </div>
+    </main>
+    {{>footer}}
+
+     
+
+</script>
+    <script src="./script/main.js"></script>
+  </body>
+</html>
