--- a/src/resources/views/user/user_home.hbs
+++ b/src/resources/views/user/user_home.hbs
@@ -101,7 +101,7 @@
         </div>
           <section
           class="carousel js-flickity section-grid"
-          data-flickity='{ "groupCells": true, "selectedAttraction": 0.01, "friction": 0.15, "autoPlay": 2000 }'
+          data-flickity='{ "groupCells": true, "autoPlay": 3000 }'
           >
         {{#each products}}
 
