--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -944,6 +944,11 @@ section .more {
   max-width: 300px;
 }
 
+.products-container .right .card .card-title {
+  font-size: 1.1em !important;
+  text-align: left;
+}
+
 .products-container .right .card .card-content {
   display: flex;
   flex-direction: column;
@@ -1096,6 +1101,10 @@ section .more {
 
 /* ------------------ product-details -------------------- */
 
+.product-details-main {
+  background-color: #fff;
+}
+
 .product-details-main .container {
   width: 900px !important;
 }
@@ -1113,6 +1122,8 @@ section .more {
   font-size: 2em;
   font-weight: 600;
   overflow-wrap: break-word;
+  line-height: 1.3;
+  text-align: left;
 }
 
 .product-details-container .left .pd-price {
@@ -1151,13 +1162,16 @@ section .more {
 
 .product-details-container .right .product-img {
   text-align: right;
+  width: 500px;
+  height: 400px;
 }
 
 .product-details-container .right img {
-  width: 500px;
+  width: 400px;
   height: 100%;
-  aspect-ratio: auto 500 / 100%;
+  aspect-ratio: auto 400px / 100%;
   border-radius: 18px;
+  object-fit: cover;
 }
 
 .product-details-main .container .pd-title {
@@ -1318,4 +1332,68 @@ section .more {
   padding: 10px;
   box-sizing: border-box;
   font-size: 1em;
+}
+
+/* ------------------- about us ---------------- */
+.banner-sec {
+  height: 400px;
+  min-height: auto;
+  background-size: cover;
+  background-position: center center;
+  color: #fff;
+  padding: 130px 0;
+  display: flex;
+  -webkit-box-align: center;
+  margin-bottom: 50px;
+}
+.banner-title {
+  font-weight: 700;
+}
+.title-about {
+  font-size: 40px;
+  line-height: 1.1;
+  font-weight: 600;
+}
+.content > p {
+  margin-top: 20px;
+}
+.content span {
+  margin-left: auto;
+  margin-right: auto;
+}
+.content {
+  text-align: center;
+  margin-bottom: 30px;
+}
+.Contact {
+  border-top: 1px solid #d2d2d7;
+  border-bottom: 1px solid #d2d2d7;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+.Contact p {
+  font-size: 17px;
+  line-height: 1.47059;
+  font-weight: 400;
+}
+.team-member .header {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  text-align: center;
+  font-size: 40px;
+  line-height: 1.1;
+  font-weight: 600;
+}
+.team-member .info {
+  display: flex;
+}
+.info .member {
+  margin-right: 60px;
+  text-align: center;
+}
+.member img {
+  margin-bottom: 20px;
+  border-radius: 15px !important;
 }
