--- a/src/resources/views/user/cart.hbs
+++ b/src/resources/views/user/cart.hbs
@@ -50,8 +50,9 @@
             </div>
             <hr />
             <div class="row">
-              <h5 class="subtotal"><span>Subtotal</span><span> {{formatCurrency session.cart.totalPrice}}</span></h5>
-              <h4 class="total"><span>Total</span><span class="total-price"> {{formatCurrency session.cart.discountCost}} </span></h5>
+              <h5 class="subtotal"><span>Subtotal</span><span> {{formatCurrency session.cart.totalPrice}}</span>
+              </h5>
+              <h5 class="total"><span>Total</span><span class="total-price">  </span></h5>
               {{!-- checkout or login --}}
                <div class="checkout_login">
                    {{#if author}}
@@ -75,22 +76,4 @@
   </body>
       <script src="./script/main.js"></script>   
       <script src="./script/calcTotal.js"></script>
- {{!-- <div id="modal1" class="modal">
-    <div class="modal-content">
-      <h4 class="center">Delete Sale Product</h4>
-      <p class="center">Do you really want to delete these records ? This process cannot be undone</p>
-    </div>
-    <div class="modal-footer">
-      <a class="modal-close waves-effect waves-green btn-flat delete-agree text-darken-2 red-text">Yes, do it</a>
-      <a class="modal-close waves-effect waves-green btn-flat  grey-text">No, cancel </a>
-    </div>
-  </div>    
-<script>
- $(document).ready(function(){
-    $(".btn_delete").on("click", function(){
-        var dataId = $(this).attr("data-id");
-          $(".delete-agree").attr("href", "/cart/delete/"+dataId)
-    });
-});
-</script> --}}
 </html>
