--- a/src/resources/views/user/checkout.hbs
+++ b/src/resources/views/user/checkout.hbs
@@ -60,13 +60,13 @@
                 <div class="card-content">
                   <span class="card-title">{{this.product_name}}</span>
                   <form class="card-quantity" action="/cart/updateQty/{{this._id}}" Method="POST">
-                    <input disabled style="text-align: center;" id="quantity" type="number" required=required class="validate" min="1" max="1000" name="quantity" value="{{this.quantity}}">
+                   <input disabled style="text-align: center;" onchange="this.value > 0 ? this.form.submit() : this.form.get('quantity').value = 1" id="quantity" type="number" required=required class="p-quantity validate" min="1" max="1000" name="quantity" value="{{this.quantity}}">
                       {{!-- <div class="btns-container">
                         <button class="btn btn-active" type="submit" >Update</button>
                       </div> --}}
                   </form>
-                  <span id="originalPrice" class="card-price">{{formatCurrency this.unit_price}}</span>
-                  <span id="discountedAmount" class="card-discount">{{{this.promotion_rate}}}</span>
+                        <span id="originalPrice" class="card-price">{{formatCurrency this.unit_price}}</span>
+               <span id="discountedAmount" class="card-discount">{{this.promotion_rate}}%</span>
                   <a onclick="M.toast({html: 'Item has been removed!'})" href="/cart/delete/{{this._id}}">Remove</a>
                 </div>
                 
@@ -81,13 +81,15 @@
             <hr />
             <div class="row">
               <h5 class="subtotal" style="display: initial"><span>Subtotal:  </span><span> {{formatCurrency session.cart.totalPrice}}</span></h5>
-              <h4 class="total" style="display:flow-root"><span>Total:   </span><span>{{formatCurrency session.cart.discountCost}}</span></h5>
+              <h5 class="total"><span class="total-price">Total : 22</span> </h5>
               {{!-- checkout or login --}}
              
             </div>
             </div>
         </div>
     </div>
+        <script src="./script/main.js"></script>  
+    <script src="./script/calcTotal.js"></script>
     </div>
 
 {{>footer}}
