--- a/src/resources/views/user/product_detail.hbs
+++ b/src/resources/views/user/product_detail.hbs
@@ -77,6 +77,8 @@
                     <div class="row">
                       <div class="range-field col ">
                         <input type="range" id="range_start" min="0" max="5" name="star_no" />
+
+                      
                         <label for="range_start">Range Start</label>
                       </div>
                     </div>
@@ -114,7 +116,7 @@
                 <div class="comment-stars">
                   
                   <p>
-                      <p>{{this.star_no}}</p>
+                      <p>Star : {{this.star_no}}</p>
                       {{!-- <i class="material-icons">star</i> --}}
                
                   </p>
