Added calc Total and fix checkout UI

--- a/src/resources/views/user/product_detail.hbs
+++ b/src/resources/views/user/product_detail.hbs
@@ -116,7 +116,7 @@
                 <div class="comment-stars">
                   
                   <p>
-                      <p>Star : {{this.star_no}}</p>
+                      <p>Star : <span class="star-no">{{displayStarNo this.star_no}}</span></p>
                       {{!-- <i class="material-icons">star</i> --}}
                
                   </p>
