--- a/src/resources/views/user/checkout.hbs
+++ b/src/resources/views/user/checkout.hbs
@@ -1,8 +1,8 @@
 {{>header}}
-    <div class="container" style="margin-top:100px">
+    <div class="container" style="margin-top:100px; ">
         <h2> Checkout</h2>
     <div class="row">
-        <div class="col s6 m6">
+        <div class="col s12 m12">
                 <div class="row">
         <form class="col s12" method="POST" action="/checkout/order">
       <div class="row">
@@ -47,9 +47,9 @@
                 </div>
         
         </div>
-        <div class="col s6 m6">
-             <div class=" cart-container"> 
-          <h5 class="title">Review your cart</h5>
+        <div class="col s12 m12">
+             <div class=" cart-container" style="width: 100%"> 
+          <h5 class="title">Review your order</h5>
      
           <div class="row">
             {{#each carts.products}} 
@@ -80,16 +80,46 @@
             </div>
             <hr />
             <div class="row">
-              <h5 class="subtotal" style="display: initial"><span>Subtotal:  </span><span> {{formatCurrency session.cart.totalPrice}}</span></h5>
-              <h5 class="total"><span class="total-price">Total : 22</span> </h5>
+              <h5 class="subtotal" style=""><span>Subtotal:  </span><span> {{formatCurrency session.cart.totalPrice}}</span></h5>
+              <h5 class="subtotal" style=""><span >Discount: </span><span class="discounted-price"></span></h5>
+              <h5 class="total">Total: <span class="total-price"></span> </h5>
               {{!-- checkout or login --}}
              
             </div>
             </div>
         </div>
     </div>
-        <script src="./script/main.js"></script>  
-    <script src="./script/calcTotal.js"></script>
+        {{!-- <script src="./script/main.js"></script>   --}}
+
+      {{!-- <script src="./script/calcTotal.js"></script> --}}
+      <script>
+        const productQuantites = document.querySelectorAll(".p-quantity");
+        const productPrices = document.querySelectorAll(".card-price");
+        const cartDiscounts = document.querySelectorAll(".card-discount");
+        let totalPrice = 0,
+          quantity,
+          prices,
+          price,
+          discounts,
+          discount,
+          discountedPrice = 0;
+        for (let i = 0; i < productQuantites.length; i++) {
+          quantity = Number(productQuantites[i].value);
+          prices = productPrices[i].textContent.match(/\d+/g);
+          price = Number(prices[0]) + Number(`0.${prices[1]}`);
+          discounts = cartDiscounts[i].textContent.match(/\d+/g);
+          discount = Number(discounts[0]);
+          totalPrice += quantity * price * (1 - discount / 100);
+          //   console.log(quantiy);
+          //   console.log(price);
+          discountedPrice += quantity * price * (discount / 100);
+          console.log(quantity, price, discount);
+        }
+
+        console.log(totalPrice);
+        document.querySelector(".total-price").innerHTML = `$${totalPrice}`;
+        document.querySelector(".discounted-price").innerHTML = `$${discountedPrice}`;
+      </script>
     </div>
 
 {{>footer}}
