--- a/src/resources/views/user/user_account_order.hbs
+++ b/src/resources/views/user/user_account_order.hbs
@@ -195,9 +195,9 @@
                
               <a data-position="top" data-tooltip="Revert" href="/user_account/status/{{this.order_status}}/{{this._id}}/user_back" class="btn btn-small  tooltipped orange lighten-2 button-radius "><i class="material-icons">replay</i></a>
               <a data-position="top" data-tooltip="Detail" href="/user_account/{{{this._id}}}?Page=1" class="btn btn-small  tooltipped  yellow darken-4"><i class="material-icons">details</i></a>
-                  <a  data-position="top" data-tooltip="Delete" data-id="{{{this._id}}}" class="waves-effect waves-light btn  btn-small  tooltipped  modal-trigger btn_delete red" href="#modal">
+                  {{!-- <a  data-position="top" data-tooltip="Delete" data-id="{{{this._id}}}" class="waves-effect waves-light btn  btn-small  tooltipped  modal-trigger btn_delete red" href="#modal">
                     <i class="material-icons">delete</i>
-                  </a>        
+                  </a>         --}}
                </td>
                
              <td> </td>
