--- a/src/resources/views/user/user_account_orderDetail.hbs
+++ b/src/resources/views/user/user_account_orderDetail.hbs
@@ -23,6 +23,9 @@
           <li>
             Note : {{order.note}}
           </li>
+          <li>
+            Total : 
+          </li>
         </ul>
     </div>
  <div class="  paper_container z-depth-1">
