--- a/src/resources/views/user/article-detail.hbs
+++ b/src/resources/views/user/article-detail.hbs
@@ -46,99 +46,36 @@
         <div class="article-details-container">
           <div class="main-articles-container">
             <h2 class="article-title">
-              Mass vaccination boosted in Mekong Delta
+              {{article.title}}
             </h2>
             <h3 class="article-subtitle">
               By
-              <span class="article-author">Huy Phong, Ngoc Tai</span>
-              <span class="article-date">October 14, 2021 | 07:31 am GMT+7</span>
+              <span class="article-author">{{article.author}}</span>
+              <span class="article-date">{{convertDate article.createdAt}}</span>
             </h3>
+              <img style="width:400px" src="../uploads/{{{article.image}}}" />
             <div class="article-content">
-              Mekong Delta localities are accelerating Covid-19 immunization now
-              they have access to more vaccines. On Tuesday, Can Tho City
-              allocated 500,000 Sinopharm and 40,000 Pfizer doses to its nine
-              districts for mass vaccination. As planned, from now until
-              December, the city will administer at least 36,000 vaccine doses
-              per day. The capital of Mekong Delta is one of the localities in
-              the region to boost vaccination after the central government
-              decided to prioritize vaccines for southern localities. Nguyen
-              Ngoc Anh, vice chairman of Ninh Kieu, the most populated district
-              in Can Tho, said Tuesday the district has been inoculating
-              8,000-10,000 people per day and in most cases, with Sinopharm.
-              With a population of 283,000, of whom 70 percent are over 18, the
-              district has vaccinated 20 percent of adults with at least one
-              shot, he said. Can Tho's vice chairman Duong Tan Hien said in
-              addition to priority groups, including medical workers and the
-              frontline force, the city has boosted injections for its workforce
-              in order to soon restore business and production. So far, almost
-              432,000 people over 18, or 26.8 percent of Can Tho's total adult
-              population, have been vaccinated. Of these, nearly 100,000 have
-              been fully immunized with two doses. Home to 20 million, or
-              one-fifth of the nation's population, the Delta currently has an
-              average first-dose vaccination rate of less than 30 percent. Since
-              early this month, the region has received more than 300,000
-              returnees from Ho Chi Minh City, Binh Duong, Dong Nai and Long An,
-              the four hardest-hit localities of Vietnam’s latest Covid-19 wave.
-              Many returnees have not been vaccinated. The Delta’s Soc Trang
-              Province, with a population of 1.2 million and a vaccination rate
-              of only 5 percent, is organizing to inoculate 500,000 more people
-              from Oct. 11, focusing on high-risk areas and the workforce in
-              industrial complexes and business facilities. In Tra Vinh, Kien
-              Soc Kha, director of the municipal Health Department, said with
-              500,000 Sinopharm doses allocated by the Health Ministry, the
-              province is boosting progress to administer all as fast as
-              possible. With an adult population of 765,000, Tra Vinh has so far
-              vaccinated 160,000, with 53,000 given two shots. Dong Thap
-              Province had also received 500,000 Sinopharm doses to raise the
-              total amount of vaccines it has been allocated to one million
-              doses. Its vaccination rate currently stands at 8.2 percent. The
-              province is boosting its speed to inoculate 40,000-50,000 people
-              per day, with mobile vaccination stations established at schools
-              and training centers. With 1.4 million over 18, An Giang Province
-              has been offered an additional one million Sinopharm doses. Its
-              chairman Nguyen Thanh Binh said the vaccine comes at the right
-              time as workers and vendors resume operation. To date, only 24
-              percent of the province’s adult population has received their
-              first shot and just 10 percent their second. Nationwide, around
-              55.2 million people have got one shot while 16 million have been
-              fully vaccinated.
+             {{article.content}}
             </div>
             <div class="related-articles">
               <h3>Related articles</h3>
               <div class="section-grid">
                 <div class="row">
+                  {{#each articles}}
                   <div class="col s12 m12 l12">
-                    <a href="#" class="card">
+                    <a href="/news/{{this._id}}" class="card">
                       <div class="card-image">
-                        <img src="./images/ophthalmologist-not-css.svg" />
+                        <img src="../uploads/{{{this.image}}}" />
                       </div>
                       <div class="card-content">
-                        <span class="card-date">October 11 2021</span>
-                        <span class="card-title">Covid-19 in Vietnam </span>
-                        <span class="card-brief">Lorem, ipsum dolor sit amet
-                          consectetur adipisicing elit. Ab, quae. Voluptatibus
-                          error, nobis pariatur laudantium omnis facilis
-                          blanditiis tenetur veniam.</span>
-                        <div class="card-author">By Nhan Dang</div>
+                        <span class="card-date">{{{convertDate this.createdAt}}}</span>
+                        <span class="card-title">{{{this.title}}}</span>
+                        <span class="card-brief">{{{formatLongString this.content}}}</span>
+                        <div class="card-author">{{{ this.author}}}</div>
                       </div>
                     </a>
                   </div>
-                  <div class="col s12 m12 l12">
-                    <a href="#" class="card">
-                      <div class="card-image">
-                        <img src="./images/ophthalmologist-not-css.svg" />
-                      </div>
-                      <div class="card-content">
-                        <span class="card-date">October 11 2021</span>
-                        <span class="card-title">Covid-19 in Vietnam: New wave
-                          tally nears 804,000</span>
-                        <span class="card-brief">Lorem, ipsum dolor sit amet
-                          consectetur adipisicing elit.
-                        </span>
-                        <div class="card-author">By Nhan Dang</div>
-                      </div>
-                    </a>
-                  </div>
+                  {{/each}}
                 </div>
               </div>
             </div>
