--- a/src/resources/views/user/checkout.hbs
+++ b/src/resources/views/user/checkout.hbs
@@ -1,6 +1,7 @@
 {{>header}}
     <div class="container" style="margin-top:100px; ">
         <h2> Checkout</h2>
+           <h5 class="title">Review your Information</h5>
     <div class="row">
         <div class="col s12 m12">
                 <div class="row">
@@ -67,7 +68,7 @@
                   </form>
                         <span id="originalPrice" class="card-price">{{formatCurrency this.unit_price}}</span>
                <span id="discountedAmount" class="card-discount">{{this.promotion_rate}}%</span>
-                  <a onclick="M.toast({html: 'Item has been removed!'})" href="/cart/delete/{{this._id}}">Remove</a>
+                  {{!-- <a onclick="M.toast({html: 'Item has been removed!'})" href="/cart/delete/{{this._id}}">Remove</a> --}}
                 </div>
                 
               </div>
@@ -82,7 +83,7 @@
             <div class="row">
               <h5 class="subtotal" style=""><span>Subtotal:  </span><span> {{formatCurrency session.cart.totalPrice}}</span></h5>
               <h5 class="subtotal" style=""><span >Discount: </span><span class="discounted-price"></span></h5>
-              <h5 class="total">Total: <span class="total-price"></span> </h5>
+              <h5 class="total">Total: <p class="total-price"></p> </h5>
               {{!-- checkout or login --}}
              
             </div>
