--- a/src/resources/views/user/user_home.hbs
+++ b/src/resources/views/user/user_home.hbs
@@ -43,12 +43,12 @@
             <p>Together,we are working toward a healthier community.</p>
             <div class="btns-container">
               <a
-                href="./products.html"
+                href="/goods"
                 id="btn--explore"
                 class="btn-active btn"
               >Explore our products</a>
               <a
-                href="./about-us.html"
+                href="/about/view"
                 id="btn--about"
                 class="btn-inactive btn"
               >About us</a>
@@ -138,7 +138,7 @@
             <div class="row">
               {{#each articles}}
               <div class="col s12 m4">
-                <a href="#" class="card">
+                <a href="/news/{{this._id}}" class="card">
                   <div class="card-image">
                     <img src="../uploads/{{{this.image}}}" />
                   </div>
