--- a/src/resources/views/user/article-detail.hbs
+++ b/src/resources/views/user/article-detail.hbs
@@ -38,7 +38,7 @@
     <main id="main " class="subpage-main article-page">
       <div class="hero-bg">
         <img
-          src="./images/8781da074b51be0f9d5d1a65b6caea07a78ba9c8.jpg"
+          src="../uploads/{{{article.image}}}"
           alt=""
         />
       </div>
