--- a/src/resources/views/user/checkout.hbs
+++ b/src/resources/views/user/checkout.hbs
@@ -1,32 +1,32 @@
 {{>header}}
-    <div class="container" style="margin-top:100px; ">
+    <div class="container checkout-container" >
         <h2> Checkout</h2>
            <h5 class="title">Review your Information</h5>
     <div class="row">
         <div class="col s12 m12">
                 <div class="row">
-        <form class="col s12" method="POST" action="/checkout/order">
+        <form class="u-info col s12" method="POST" action="/checkout/order">
       <div class="row">
         <div class="input-field col s6">
+          <span for="full_name">Full Name</span>
           <input  value="{{account.full_name}}" id="full_name" type="text" class="validate" name="full_name">
-          <label for="full_name">Full Name</label>
         </div>
         <div class="input-field col s6">
+          <span for="phone_number">Phone Number</span>
           <input id="phone_number" type="number"  value="{{account.phone_number}}"class="validate" name="phone_number">
-          <label for="phone_number">Phone Number</label>
         </div>
       </div>
       <div class="row">
      <div class="input-field col s12">
+          <span for="delivery_address">Address</span>
           <input id="delivery_address" type="text" class="validate" name="delivery_address" value
           ="{{account.address}}">
-          <label for="delivery_address">Address</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
+          <span for="email">Email</span>
           <input id="email" type="email" class="validate" value="{{account.email}}" name="email">
-          <label for="email">Email</label>
         </div>
       </div>
         <div class="row" hidden>
@@ -37,12 +37,12 @@
       </div>
        <div class="row">
         <div class="input-field col s12">
+          <span for="note">Note</span>
           <input id="note" type="text" class="validate" value="" name="note">
-          <label for="note">Note</label>
         </div>
       </div>
       <div style="margin-top: 20px; text-align: right;">
-            <button type="submit" onclick="alert('Order Successful ')"  class="btn btn-active">place an order</button>
+            <button type="submit" onclick="alert('Order Successful ')"  class="btn btn-active">Place order</button>
         </div>
                      </form>
                 </div>
@@ -79,8 +79,8 @@
                 </div>
             {{/each}}
             </div>
-            <hr />
-            <div class="row">
+            <hr style="width: 850px"/>
+            <div class="cart-footer row">
               <h5 class="subtotal" style=""><span>Subtotal:  </span><span> {{formatCurrency session.cart.totalPrice}}</span></h5>
               <h5 class="subtotal" style=""><span >Discount: </span><span class="discounted-price"></span></h5>
               <h5 class="total">Total: <p class="total-price"></p> </h5>
